[package]
name = "info"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/RuairidhWilliamson/info"
readme = "readme.md"
description = "A simple crate to collect information about the build environment."
license-file = "licence.md"
keywords = ["build", "info"]
categories = ["development-tools"]

[features]
serde = ["dep:serde", "semver/serde"]

[dependencies]
git-version = "0.3"
os_info = "3.9"
rustc_version = "0.4"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[lints.rust]
unsafe_code = "warn"
unused_crate_dependencies = "warn"
missing_docs = "warn"

[lints.clippy]
# Cargo
wildcard_dependencies = "warn"
cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
unnecessary_debug_formatting = "allow"
